Styling the mobile menu

--- a/client/src/pages/MobileNavbarMenu/MobileNavbarMenu.css
+++ b/client/src/pages/MobileNavbarMenu/MobileNavbarMenu.css
@@ -2,34 +2,49 @@
     height: 94vh;
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding: 0 20px;
+    background-color: white;
 }
 
-.mobileNavbarMenuDiv p {
+.mobileNavbarMenuDiv > hr {
     margin: 0;
 }
 
-.mobileNavbarMenuDiv img {
-    height: 100%;
-    border-radius: 50%;
-}
-
-.mobileNavbarMenuDiv > div {
+.mobileMenuRow {
     display: flex;
     align-items: center;
     height: 10%;
     cursor: pointer;
-    margin-bottom: 20px;
+}
+
+.mobileMenuRow > p {
+    margin: 0;
 }
 
 .mobileMenuImageDiv {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 100%;
     width: 20%;
 }
 
+.mobileMenuProfilePic {
+    height: 80%;
+    border-radius: 50%;
+}
+
+.mobileMenuFavouritesIcon {
+    height: 75%;
+}
+
+.mobileMenuMessagesIcon {
+    height: 65%;
+}
+
 .mobileMenuButton {
+    margin: 20px 0;
     width: 30%;
-    margin-left: 20px;
     padding: 10px;
     border: none;
     border-radius: 5px;
